[package]
name = "aoc-rust-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
thiserror = "1.0"
firestorm = { version = "0.4", features = ["enable_system_time"] }


[profile.release]
debug = true  # Can be set to 1 or 2 for more detailed symbols
